# elasticsearch-ltr-demo

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  prepare.sh  pyproject.toml  run.sh
app/demo/: check_search_results.py  esutils.py  feature_esutils.py  feature_extractor.py  index_tmdb.py  judgment.py  judgment_utils.py  logger.py  settings.cfg  train.py
app/demo/data/judgment/: sample_judgments.txt
app/tests/: test_check_search_results.py
docs/: es-sequence.pu
es/: Dockerfile
