[tool.poetry]
name = "elasticsearch-ltr-demo"
version = "0.1.0"
description = "demo for elasticsearch learning-to-rank"
authors = ["kenji imai <imakenfever@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.17.7"
requests = "2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
